--- a/src/main/webapp/jquery.toastmessage.css
+++ b/src/main/webapp/jquery.toastmessage.css
@@ -42,12 +42,13 @@
 }
 
 .toast-item-image {
-    width:32px;
-    height: 32px;
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-right: 10px;
+    width:50px;
+    height: 50px;
     float:left;
+	margin:auto; 
+	top: 0; 
+	bottom: 0; 
+	position:absolute;    
 }
 
 .toast-item-image-notice {
@@ -63,7 +64,9 @@
 }
 
 .toast-item-image-error {
-    background:url(./kuvat/growl/error.png);
+    background: url(./kuvat/growl/error.png);
+    background-size: 50px 50px;
+    background-repeat: no-repeat;
 }
 
 
